Moved brand styles to navbar.css, removed brand display on mobile and fixed spacing on mobile

--- a/navbarStyles.css
+++ b/navbarStyles.css
@@ -1,7 +1,3 @@
-.brand {
-  color: var(--primary-color);
-}
-
 .navbar {
   background-color: var(--dark-blue);
   justify-content: space-between;
@@ -12,6 +8,12 @@
   position: sticky;
   top: 0;
   z-index: 1;
+}
+
+.brand {
+  height: 50px;
+  border-radius: 50%;
+  margin: 0 5px;
 }
 
 .hamburger-menu {
@@ -77,6 +79,14 @@
 @media only screen and (max-width: 750px) {
   .hamburger-menu {
     display: block;
+  }
+
+  .navbar {
+    justify-content: flex-end;
+  }
+
+  .brand {
+    display: none;
   }
 
   .nav-links {
